--- a/.gitignore
+++ b/.gitignore
@@ -21,7 +21,6 @@
 
 # AndroidIDE files
 .androidide/
-app/src/main/java/com/arpackit/arfacator/_*
 
 # Local configuration file (sdk path, etc)
 local.properties
@@ -85,3 +84,9 @@ lint/generated/
 lint/outputs/
 lint/tmp/
 # lint/reports/
+
+
+# My Util
+app/src/main/java/com/arpackit/arfacator/_*
+autoCommiter.sh
+
