--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,7 +2,7 @@
 plugins {
     id 'com.android.application'
     id 'kotlin-android'
-    //id 'kotlin-kapt'
+    id 'kotlin-kapt'
 }
 
 android {
@@ -76,7 +76,6 @@ dependencies {
     // DataStore Preferences
     implementation("androidx.datastore:datastore-preferences:1.0.0")
     
-    /*
     // Room
     def room_version = "2.5.2"
     implementation("androidx.room:room-ktx:$room_version")
@@ -87,7 +86,6 @@ dependencies {
     }
     kapt("org.xerial:sqlite-jdbc:3.44.0.0")
     debugImplementation("com.infinum.dbinspector:dbinspector:5.4.9")
-    */
     
     // 1time
     implementation("com.atlassian:onetime:2.0.2")
